; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_pmap_common.c_pmap_set_noencrypt.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_pmap_common.c_pmap_set_noencrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PHYS_NOENCRYPT = common dso_local global i32 0, align 4
@pmap_phys_attributes = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pmap_set_noencrypt(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @ppn_to_pai(i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i64 @IS_MANAGED_PAGE(i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %21

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @LOCK_PVH(i32 %10)
  %12 = load i32, i32* @PHYS_NOENCRYPT, align 4
  %13 = load i32*, i32** @pmap_phys_attributes, align 8
  %14 = load i32, i32* %3, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = or i32 %17, %12
  store i32 %18, i32* %16, align 4
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @UNLOCK_PVH(i32 %19)
  br label %21

21:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @ppn_to_pai(i32) #1

declare dso_local i64 @IS_MANAGED_PAGE(i32) #1

declare dso_local i32 @LOCK_PVH(i32) #1

declare dso_local i32 @UNLOCK_PVH(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
